--- a/.github/workflows/04-concurrency.yaml
+++ b/.github/workflows/04-concurrency.yaml
@@ -1,5 +1,5 @@
 # search in google as "github actions" --> Get started with actions --> How-tos --> write-workflows --> choose-when-workflows-run --> control-workflow-concurrency
-name: HelloWorld
+name: concurrency
 # When to trigger this pipeline. We can trigger on push or manual or someother events like creating PR, updating PR, creating branches, creating issues. 
 on: [push] # anybody push in this, it will trigger
 concurrency:
